[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio-rebalancer"
version = "1.0.0"
description = "A real-world RL environment for portfolio rebalancing built with OpenEnv"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.32.2",
    "pyyaml==6.0.1",
    "python-dotenv==1.0.1",
    "openenv-core==0.1.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/17Mouli17/portfolio-rebalancer"
Repository = "https://github.com/17Mouli17/portfolio-rebalancer"