[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-rebalancer"
version = "1.0.0"
description = "Portfolio Rebalancer OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.32.2",
    "pyyaml==6.0.1",
    "python-dotenv==1.0.1",
    "openenv-core==0.1.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*", "server*"]